--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": ["./node_modules/@popperjs/core/dist/umd/popper.min.js",
-                        "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
+                        "./node_modules/bootstrap/dist/js/bootstrap.min.js","https://kit.fontawesome.com/92b76c5253.js"]
           },
           "configurations": {
             "production": {
