On branch master  Your branch is behind 'origin/master' by 8 commits, and can be fast-forwarded.  Changes to be committed:

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/.angular
+.browserslistrc
+.editorconfig
+tsconfig.json
+tsconfig.app.json
+tsconfig.spec.json
+.gitignore
